[metadata]
name = snapblock
version = 1.0.0
author = James Ashby
author_email = james.ashby@colorado.edu
description = Snapblock abstracts data exchange with diverse external systems, such as object storage and databases, into atomic operations, enabling seamless and efficient interfacing defined by system-agnostic JSON blocks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UCBoulder/oit-ds-tools-snapblock
project_urls =
    Bug Tracker = https://github.com/UCBoulder/oit-ds-tools-snapblock/issues
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.10
install_requires =
    boto3
    minio
    mysql-connector-python
    oracledb
    pandas
    paramiko
    psycopg2-binary
    pyarrow
    pyodbc
    pysmb
    s3fs
